# georeference-tool

./: .gitignore  Containerfile  README.md  example.env  manage.py  pyproject.toml
.github/workflows/: build.yml
georeference_tool/: asgi.py  settings.py  urls.py  views.py  wsgi.py
images/: admin.py  apps.py  models.py  urls.py  views.py  views_fixed.py
images/management/commands/: add_random_difficulty.py  create_sample_data.py  import_images.py  import_real_data.py  setup_for_testing.py
images/migrations/: 0001_initial.py  0002_add_slugs.py  0002_remove_image_images_imag_year_421258_idx_and_more.py  0003_add_public_flags.py  0004_allow_anonymous_georeferences.py  0005_image_original_url_alter_image_permalink.py  0006_alter_georeference_image_and_more.py  0007_remove_georeference_unique_georeference_per_user_and_more.py
osm_auth/: apps.py  auth_backends.py  context_processors.py  middleware.py  models.py  urls.py  views.py
scripts/: README.md  __init__.py  get_insurance_maps.py
scripts/importers/: __init__.py  library_of_virginia.py  r2_uploader.py  valentine.py
templates/: base.html  home.html
templates/admin/images/: collection_label.html
templates/auth/: profile.html
templates/images/: browse_sources.html  collection_detail.html  georeference_interface.html  image_detail.html  source_detail.html
templates/images/partials/: map_display.html
