[project]
name = "georeference-tool"
version = "0.1.0"
description = "A Django web application for georeferencing historical images."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "boto3>=1.40.27",
    "click>=8.2.1",
    "django>=5.2.6",
    "edtf>=5.0.0",
    "osm-login-python>=2.0.0",
    "psycopg[binary]>=3.2.10",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
    "whitenoise>=6.10.0",
]
